--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,6 +12,8 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
+    "mongodb": "^2.2.25",
+    "mongoose": "^4.9.2",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
   }
