--- a/src/server/package.json
+++ b/src/server/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "supervisor": "^0.12.0"
   }
 }
